--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "isolatedModules": true,
     "noEmit": false,
     "outDir": "dist",
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["node"]
   },
   "include": ["src"],
   "exclude": ["node_modules"]
