--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,7 @@
     "isolatedModules": true,
     "noEmit": false,
     "outDir": "dist",
-    "jsx": "react-jsx",
-    "types": ["node"]
+    "jsx": "react-jsx"
   },
   "include": ["src"],
   "exclude": ["node_modules"]
